// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Tab Bottone 1`] = `
<div>
  <div
    class="m-3 container"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-12"
      >
        <ul
          class="mb-3 nav nav-pills"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="#"
            >
              Tab 1
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#"
            >
              Tab 2
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#"
            >
              Tab 3
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-sm-12"
      >
        <div
          class="tab-content"
        >
          <div
            class="tab-pane p-3 active"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </div>
          <div
            class="tab-pane p-3"
          >
            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </div>
          <div
            class="tab-pane p-3"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tab Esempi 1`] = `
<div>
  <div>
    <ul
      class="mb-3 nav nav-tabs"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active"
          href="#"
        >
          Link Attivo
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          Link
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          Link
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link disabled"
          disabled=""
          href="#"
        >
          Link disabilitato
        </a>
      </li>
    </ul>
    <ul
      class="nav-dark nav nav-tabs"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active"
          href="#"
        >
          Link Attivo
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          Link
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          Link
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link disabled"
          disabled=""
          href="#"
        >
          Link disabilitato
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tab Icona 1`] = `
<div>
  <div>
    <ul
      class="mb-3 nav nav-tabs"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active"
          href="#"
        >
          <span>
            <svg
              aria-hidden="true"
              class="icon icon-primary"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m13.4 13.4-.7-.7c.6-.5.9-1.3.9-2.1s-.3-1.6-.9-2.1L9.2 4.9C8 3.8 6.1 3.8 4.9 4.9 3.8 6.1 3.8 8 4.9 9.2L7.8 12l-.7.7-2.9-2.8c-1.5-1.6-1.5-4.1 0-5.7 1.6-1.5 4.1-1.5 5.7 0l3.5 3.6c.8.7 1.2 1.7 1.2 2.8 0 1.1-.4 2.1-1.2 2.8zm6.4 6.4c1.5-1.6 1.5-4.1 0-5.7l-2.9-2.8-.7.7 2.9 2.8c1.1 1.2 1.1 3.1 0 4.3-1.2 1.1-3.1 1.1-4.3 0l-3.5-3.6c-.6-.5-.9-1.3-.9-2.1s.3-1.6.9-2.1l-.7-.7c-.8.7-1.2 1.7-1.2 2.8 0 1.1.4 2.1 1.2 2.8l3.5 3.6c.7.7 1.8 1.1 2.8 1.1 1.1.1 2.1-.3 2.9-1.1z"
              />
            </svg>
            <i
              aria-label="Tab titolo 1"
              class="it-ico-lg it-file d-block text-center"
            />
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          <span>
            <svg
              aria-hidden="true"
              class="icon icon-primary"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M20.5 4H17V3h-1v1H8V3H7v1H3.5C2.7 4 2 4.7 2 5.5v13c0 .8.7 1.5 1.5 1.5h17c.8 0 1.5-.7 1.5-1.5v-13c0-.8-.7-1.5-1.5-1.5zm.5 14.5c0 .3-.2.5-.5.5h-17c-.3 0-.5-.2-.5-.5v-13c0-.3.2-.5.5-.5H7v1h1V5h8v1h1V5h3.5c.3 0 .5.2.5.5v13zM4 8h16v1H4V8z"
              />
            </svg>
            <i
              aria-label="Tab titolo 2"
              class="it-ico-lg it-calendar d-block text-center"
            />
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          <span>
            <svg
              aria-hidden="true"
              class="icon icon-primary"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h2v5.4l1.7-1.7 3.7-3.7H19c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm1 12c.1.5-.3.9-.8 1H12l-4 4v-4H5c-.5.1-.9-.3-1-.8V5c-.1-.5.3-.9.8-1H19c.5-.1.9.3 1 .8V15zM9 10c.1.5-.3.9-.8 1H8c-.5.1-.9-.3-1-.8V10c-.1-.5.3-.9.8-1H8c.5-.1.9.3 1 .8v.2zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1z"
              />
            </svg>
            <i
              aria-label="Tab titolo 3"
              class="it-ico-lg it-comment d-block text-center"
            />
          </span>
        </a>
      </li>
    </ul>
    <div
      class="tab-content"
    >
      <div
        class="tab-pane p-3 active"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
      <div
        class="tab-pane p-3"
      >
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
      </div>
      <div
        class="tab-pane p-3"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tab Testo 1`] = `
<div>
  <div>
    <ul
      class="mb-3 nav nav-tabs"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active"
          href="#"
        >
          <span>
            Tab titolo 1
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          <span>
            Tab titolo 2
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          <span>
            Tab titolo 3
          </span>
        </a>
      </li>
    </ul>
    <div
      class="tab-content"
    >
      <div
        class="tab-pane p-3 active"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
      <div
        class="tab-pane p-3"
      >
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
      </div>
      <div
        class="tab-pane p-3"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tab TestoIcona 1`] = `
<div>
  <div>
    <ul
      class="mb-3 nav nav-tabs"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active"
          href="#"
        >
          <span>
            <svg
              aria-hidden="true"
              class="icon icon-primary"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m13.4 13.4-.7-.7c.6-.5.9-1.3.9-2.1s-.3-1.6-.9-2.1L9.2 4.9C8 3.8 6.1 3.8 4.9 4.9 3.8 6.1 3.8 8 4.9 9.2L7.8 12l-.7.7-2.9-2.8c-1.5-1.6-1.5-4.1 0-5.7 1.6-1.5 4.1-1.5 5.7 0l3.5 3.6c.8.7 1.2 1.7 1.2 2.8 0 1.1-.4 2.1-1.2 2.8zm6.4 6.4c1.5-1.6 1.5-4.1 0-5.7l-2.9-2.8-.7.7 2.9 2.8c1.1 1.2 1.1 3.1 0 4.3-1.2 1.1-3.1 1.1-4.3 0l-3.5-3.6c-.6-.5-.9-1.3-.9-2.1s.3-1.6.9-2.1l-.7-.7c-.8.7-1.2 1.7-1.2 2.8 0 1.1.4 2.1 1.2 2.8l3.5 3.6c.7.7 1.8 1.1 2.8 1.1 1.1.1 2.1-.3 2.9-1.1z"
              />
            </svg>
            <i
              aria-label="Tab titolo 1"
              class="it-ico-lg it-file d-block text-center"
            />
          </span>
          <span>
            Tab titolo 1
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          <span>
            <svg
              aria-hidden="true"
              class="icon icon-primary"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M20.5 4H17V3h-1v1H8V3H7v1H3.5C2.7 4 2 4.7 2 5.5v13c0 .8.7 1.5 1.5 1.5h17c.8 0 1.5-.7 1.5-1.5v-13c0-.8-.7-1.5-1.5-1.5zm.5 14.5c0 .3-.2.5-.5.5h-17c-.3 0-.5-.2-.5-.5v-13c0-.3.2-.5.5-.5H7v1h1V5h8v1h1V5h3.5c.3 0 .5.2.5.5v13zM4 8h16v1H4V8z"
              />
            </svg>
            <i
              aria-label="Tab titolo 2"
              class="it-ico-lg it-calendar d-block text-center"
            />
          </span>
          <span>
            Tab titolo 2
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
        >
          <span>
            <svg
              aria-hidden="true"
              class="icon icon-primary"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h2v5.4l1.7-1.7 3.7-3.7H19c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm1 12c.1.5-.3.9-.8 1H12l-4 4v-4H5c-.5.1-.9-.3-1-.8V5c-.1-.5.3-.9.8-1H19c.5-.1.9.3 1 .8V15zM9 10c.1.5-.3.9-.8 1H8c-.5.1-.9-.3-1-.8V10c-.1-.5.3-.9.8-1H8c.5-.1.9.3 1 .8v.2zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1z"
              />
            </svg>
            <i
              aria-label="Tab titolo 3"
              class="it-ico-lg it-comment d-block text-center"
            />
          </span>
          <span>
            Tab titolo 3
          </span>
        </a>
      </li>
    </ul>
    <div
      class="tab-content"
    >
      <div
        class="tab-pane p-3 active"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
      <div
        class="tab-pane p-3"
      >
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
      </div>
      <div
        class="tab-pane p-3"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tab Verticale 1`] = `
<div>
  <div
    class="m-3 container"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-3"
      >
        <ul
          class="mb-3 nav flex-column nav-pills"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="#"
            >
              Tab 1
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#"
            >
              Tab 2
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="#"
            >
              Tab 3
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-sm-9"
      >
        <div
          class="tab-content"
        >
          <div
            class="tab-pane p-3 active"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </div>
          <div
            class="tab-pane p-3"
          >
            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </div>
          <div
            class="tab-pane p-3"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
